Fix double border when `.list-group` just after `.card-header`

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -58,6 +58,12 @@
             }
         }
     }
+
+    .card-header + .list-group {
+        .list-group-item:first-child {
+            border-top-width: 0;
+        }
+    }
 }
 
 // Optional textual caps
